--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/metro-config": "^0.10.6",
     "@ant-design/icons": "^5.1.4",
+    "@expo/metro-config": "^0.10.6",
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "dotenv": "^16.3.1",
     "expo": "~48.0.18",
+    "expo-camera": "~13.2.1",
     "expo-constants": "~14.2.1",
     "expo-font": "~11.1.1",
     "expo-linking": "~4.0.1",
@@ -33,12 +35,12 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-elements": "^3.4.3",
+    "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-maps": "1.3.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.10",
-    "@react-native-async-storage/async-storage": "1.17.11"
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
